--- a/src/style.css
+++ b/src/style.css
@@ -10,6 +10,7 @@ body {
     background-color: var(--bg-color);
     padding: 0;
     margin: 0;
+    min-width: 1300px;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: 400;
     font-size: 16px;
@@ -33,6 +34,7 @@ a:visited {
 
 .navigation {
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
     justify-content: space-between;
     height: var(--space);
@@ -62,7 +64,8 @@ a:visited {
 .hero-image {
     display: block;
     width: 100%;
-    height: 32vw;
+    min-height: 400px;
+    max-height: 32vw;
     margin-top: var(--space);
     object-fit: cover;
 }
@@ -85,7 +88,9 @@ a:visited {
 .description__map {
     display: block;
     margin: var(--space) 0;
-    width: 80vw;
+    max-width: 80vw;
+    max-height: 80vh;
+    object-fit: contain;
 }
 
 .description__info-link {
@@ -127,9 +132,8 @@ a:visited {
 }
 .tickets__map {
     width: 40%;
+    object-fit: contain;
     margin-left: 10%;
-    height: auto;
-    display: block;
 }
 
 .transfer {
@@ -160,16 +164,42 @@ a:visited {
     width: 30%;
 }
 
-.rule-time {
-
+.rule-time:before {
+    content: "";
+    display: block;
+    margin-bottom: 1em;
+    width: 2em;
+    height: 2em;
+    background-image: url(img/icons/time.svg);
+    background-size: contain;
 }
 
 .rule-wc {
     margin-top: var(--space-half);
 }
 
+.rule-wc:before {
+    content: "";
+    display: block;
+    margin-bottom: 1em;
+    width: 2em;
+    height: 2em;
+    background-image: url(img/icons/wc.svg);
+    background-size: contain;
+}
+
 .rule-equip {
     margin-top: var(--space-half);
+}
+
+.rule-equip:before {
+    content: "";
+    display: block;
+    margin-bottom: 1em;
+    width: 2em;
+    height: 2em;
+    background-image: url(img/icons/equip.svg);
+    background-size: contain;
 }
 
 .rule-hot {
@@ -177,13 +207,39 @@ a:visited {
     margin-left: 4em;
 }
 
+.rule-hot:before {
+    content: "";
+    display: block;
+    margin-bottom: 1em;
+    width: 2em;
+    height: 2em;
+    background-image: url(img/icons/hot.svg);
+    background-size: contain;
+}
+
 .rule-fire {
     margin-top: var(--space-half);
     margin-left: 8em;
 }
 
-.rule-silence {
+.rule-fire:before {
+    content: "";
+    display: block;
+    margin-bottom: 1em;
+    width: 2em;
+    height: 2em;
+    background-image: url(img/icons/fire.svg);
+    background-size: contain;
+}
 
+.rule-silence:before {
+    content: "";
+    display: block;
+    margin-bottom: 1em;
+    width: 2em;
+    height: 2em;
+    background-image: url(img/icons/silence.svg);
+    background-size: contain;
 }
 
 .merch {
